creating the MVC design pattern and calling the user information through the JWT token and if use is valid then send the result else access denied status show

--- a/HISTORICAL-VENUE-OF-MAHARASHTRA/src/main/resources/application.properties
+++ b/HISTORICAL-VENUE-OF-MAHARASHTRA/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=HISTORICAL-VENUE-OF-MAHARASHTRA
+#Database settings
+spring.datasource.url=jdbc:mysql://localhost:3306/HISTORICAL_VENUE_OF_MAHARASHTRA
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#Hibernate Setting
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dilect=org.hibernate.dialect.MySQL8Dialect
+
